<resources>
    <string name="app_name">CoroutineExample</string>
    <string name="tutorial_1">Tutorial 1</string>
    <string name="tutorial_2">Tutorial 2</string>
    <string name="tutorial_3">Tutorial 3</string>
    <string name="testing_purpose">Testing Purpose</string>
    <string name="tutorial_4">Tutorial 4</string>
    <string name="tutorial_5">Tutorial 5</string>
    <string name="tutorial_6">Tutorial 6</string>
    <string name="sample_7_second_activity">Sample 7 Second Activity</string>
    <string name="start">Start</string>
    <string name="tutorial_7">Tutorial 7</string>
</resources>