<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CoroutineTutorial">

    <TextView
        android:id="@+id/tvTutorial_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/tutorial_1"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvTutorial_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/tutorial_2"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvTutorial_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/tutorial_3"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvTutorial_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/tutorial_4"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvTutorial_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/tutorial_5"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvTutorial_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/tutorial_6"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvTutorial_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/tutorial_7"
        android:textSize="13sp" />

</LinearLayout>